Preparando para deploy no railway

--- a/Tech.Api/appsettings.Production.json
+++ b/Tech.Api/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=C:\\Users\\Guilherme\\Desktop\\Workspace\\Tech\\Tech.Api\\Infrastructure\\TechLibraryDb.db"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
